--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,28 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+  <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCrtzGOxspnREqVOWVg-CMSYo2JJHekXzU",
+    authDomain: "cs4360-assignment1-da7ee.firebaseapp.com",
+    projectId: "cs4360-assignment1-da7ee",
+    storageBucket: "cs4360-assignment1-da7ee.appspot.com",
+    messagingSenderId: "507653380102",
+    appId: "1:507653380102:web:4bd629ea0bba141f330b87"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
